<?xml version="1.0" encoding="utf-8"?>
<resources>

 <!--    Splash Screen Strings -->
    <string name="app_name">Citiloco</string>
    <string name="title_button">ND Startup Weekend</string>
    <string name="title_splash">citiloco</string>
    <string name="goplan_button">What to do Here?</string>
    <string name="you_are_in">You are now:</string>
    <string name="default_loc">Waiting&#x2014; hang tight.</string>
    <string name="trav_hard">because traveling is tough.</string>
    
<!--     City Choice Screen Strings -->
	<string name="we_think">We think you are:</string>
	<string name="this_city_button">Show Me Around Here</string>
	<string name="plan_city_button">Planning for the Future</string>
	<string name="choiceQuestion">Are you staying here?</string>
	
<!-- 	Parameter Entry Screen Strings -->
	<string name="costPrompt">How much do you want to spend?</string>
	<string name="minCost">$0</string>
	<string name="maxCost">$100</string>
	<string name="amTimePrompt">When are you arriving?</string>
	<string name="pmTimePrompt">When are you leaving?</string>
	<string name="sendButtonText">Plan Your Trip!</string>
	<string name="tot_static">Total time:</string>
	<string name="tot_dyn">14.85 hr</string>
	
<!-- 	Schedule Screen Strings -->
	<string name="gmaps_title">Plot on Google Maps</string>

</resources>