<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkGray"
    tools:context=".SplashScreen" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->
    <ImageView
          android:id="@+id/imageView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal" 
          android:layout_marginTop="10dp"
          android:scaleType="fitXY"
          android:src="@drawable/background2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >
        
      <TextView
          android:id="@+id/areYouTv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/ccLocTv"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="32dp"
          android:text="@string/choiceQuestion"
          android:textColor="@color/White"
          android:textSize="20sp" />

      <TextView
          android:id="@+id/ccLocTv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="50dp"
          android:text="@string/default_loc"
          android:textColor="@color/White"
          android:textSize="16sp" />

      <Button
          android:id="@+id/planCityButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/thisCityButton"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="58dp"
          android:text="@string/plan_city_button" />

      <Button
          android:id="@+id/thisCityButton"
          android:layout_width="150dp"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/planCityButton"
          android:layout_alignRight="@+id/planCityButton"
          android:layout_below="@+id/areYouTv"
          android:layout_marginTop="30dp"
          android:text="@string/this_city_button" />

      </RelativeLayout>

</FrameLayout>